# AirJam

./: .gitignore  GESTURE.md  HARDWARE.md  PRODUCT.md  README.md  plan.txt
backend/: instrument_server.py  main.py  requirements.txt  ws_server.py
backend/tests/: test_instrument_server.py
docs/: GESTURE.md
frontend/: API.md  DEPLOY.md  index.html  start.bat  start.sh
frontend/css/: game.css  style.css
frontend/js/: app.js  audio.js  camera.js  game.js  gesture.js  instrument.js  player.js  songbook.js  status.js  ws.js
hardware/maixcam/: README.md  app.yaml  config.example.py  config.py  main.py  pc_generate_acoustic_guitar_wavs.py  pc_generate_piano_wavs.py  pc_generate_snare_wavs.py  piano_demo.py
hardware/maixcam/face_tracking/: gestures.py  guitar.py  melodic_zones.py  note_output.py  piano.py
hardware/maixcam/net/: ws_client.py
hardware/maixcam/tests/: test_acoustic_guitar_wav_generator.py  (+10 more)
real_hardware_code/: README.md
real_hardware_code/maixcam_proj/: main.py  pc_bread_drum_server.py  pc_drum_sampler.py  pc_generate_guitar_strum_wavs.py  pc_instrument_server.py  pc_synth_server.py
recognition/: README.md  environment.yml  pyproject.toml
recognition/scripts/: download_model.py
recognition/src/gesture_instrument_recognition.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
recognition/src/hand_instrument/: __init__.py  bridge.py  gestures.py  model.py  music.py  protocol.py  regions.py  state.py  vision.py
recognition/tests/: test_gestures.py  test_music.py  test_protocol.py  test_regions.py  test_state.py
(+47 files in other folders)
